Fixed alignment of posts and suggestions index

--- a/app/stylesheets/base.less
+++ b/app/stylesheets/base.less
@@ -19,6 +19,7 @@ p {
   margin: 0 0 2px;
 }
 h1 {
+  color: @brown - #191919;
   margin-top: 10px;
   margin-bottom: 17.4333px;
 }
@@ -339,14 +340,14 @@ ul.form_images {
 }
 
 table.zebra {
-  margin: 1em;
+  padding: 20px;
   border-spacing: 0px;
   text-align: left;
   th {
-    padding: 0.25em 0.75em;
+    padding: 0.25em 0.75em 0.25em 0.1em;
   }
   td {
-    padding: 0.75em;
+    padding: 0.75em 1.75em 0.75em 0.1em;
   }
   td.zebra_content {
     width: 65%;
@@ -360,7 +361,8 @@ table.zebra {
   }
 }
 .scaffold {
-  margin: 0.25em 21px;
+  margin: 0;
+  padding: 0;
 }
 
 .metadata {
