--- a/app/stylesheets/header.less
+++ b/app/stylesheets/header.less
@@ -43,7 +43,6 @@
   position:relative;
   width:1120px;
   h1 {
-    color: @brown - #191919;
     font-family: 'Candal', sans !important; 
     font-style: normal; 
     font-size: 70px;
