--- a/app/stylesheets/suggestion.less
+++ b/app/stylesheets/suggestion.less
@@ -41,8 +41,8 @@
   height: 350px;
 }
 
-.listing_suggestions, .listing_posts {
-  padding: 20px 0;
+.listing_posts {
+  padding: 20px;
 }
 
 .make_suggestion {
